crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.invalid-reassign-const/error.txt
Found 1 error:

Error: Cannot reassign a `const` variable

`x` is declared as const.

error.invalid-reassign-const.ts:3:2
  1 | function Component() {
  2 |   const x = 0;
> 3 |   x = 1;
    |   ^ Cannot reassign a `const` variable
  4 | }
  5 |
